hotfix: corrected cutoff download-images because of margin

--- a/client/src/components/Minimap.css
+++ b/client/src/components/Minimap.css
@@ -3,12 +3,19 @@
   grid-template-columns: repeat(40, 1fr); /* 40 columns for the grid */
   width: 160px; /* Set the width of the minimap */
   height: 120px; /* Set the height of the minimap */
-
+  /* overflow: visible; */
   margin: 16px;
   margin-left: 0px;
+  padding: 0;
+  margin: 0;
 }
 
 .minimap-pixel {
   /* Optional: border for individual pixels */
   box-sizing: border-box; /* Ensures padding and borders are included in the element's total width and height */
+}
+
+#minimapCapture {
+  width: 160px;
+  height: 120px;
 }
